--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "backend project",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "node database.js",
     "dev": "nodemon src/app.js"
   },
   "keywords": [
@@ -13,6 +13,7 @@
   "author": "nahala goudh",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mongodb": "^6.11.0"
   }
 }
