--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "backend project",
   "main": "index.js",
   "scripts": {
-    "start": "node database.js",
+    "start": "node src/app.js",
     "dev": "nodemon src/app.js"
   },
   "keywords": [
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.1",
-    "mongodb": "^6.11.0"
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.4",
+    "validator": "^13.12.0"
   }
 }
